BUG: CSS alignment resolved

--- a/styles.css
+++ b/styles.css
@@ -90,10 +90,10 @@ html, body {
     margin: 0%;
   }
 
-  .format-1>.format-2>ul>li:nth-child(4) {
+  /* .format-1>.format-2>ul>li:nth-child(4) {
     font-size: 15px;
     padding-top: 25px;
-  }
+  } */
 }
 
 .navbar {
